--- a/csv2dg/Form1.resx
+++ b/csv2dg/Form1.resx
@@ -127,7 +127,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAA1IAAAKECAIAAACCVJzWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADr4AAA6+AepCscAAAJ/xSURBVHhe7b1Lr2XLced3x/4Wgg34S3hYkNHwl/DcEwOy
+        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAJ/xSURBVHhe7b1Lr2XLced3x/4Wgg34S3hYkNHwl/DcEwOy
         3YYASdDEAGVZkNBAwxJswBOPjqhLkSabBB9NkyZBijR5/Kj3+9T75ZZkou1GwyjvqlU3GTciMjLynWvt
         /8EFuc/akZGRv4jM/K9ce5/67L32c+3aNfX6djH27sXFxWefXf7LPj+fffwxfKsGBU36hA+vGQTsrGU4
         gqmbAJi7UbUxBPA2HDO9AHsmsDbmwN6GY7WXk0L78J9H9jGdt7Lso+IvWWpJKVkNGQ5KCCQTV+IUbUwC
@@ -811,6 +811,114 @@
         /s1X/qf/7qT8wpXtxbN/9epMUothggAIgAAIgAAIgAAlcBzZd1J4t188DCLv5T+8PR37Qfah3EEABEAA
         BEAABEBgI8BlH/0n6gOjcFFe2d4yLE9vqT63JtJzcWIg+4rRoSEIgAAIgAAIgMA5EPj/AaMrEsTqMeK/
         AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgYAAADDCAIAAAB2507ZAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsEAAA7BAbiRa+0AABe9SURBVHhe7Z1LkuQ2EkR1tL6EzqJt30x3kclMO51hssUa
+        GCo+juAnCZL50mahZoFAxIuAO8gay/rtTz4QgAAEIACB/wj8BgcIQAACEIDAQgBLoBMgAAEIQOCLAJZA
+        K0AAAhCAQG4J//KBAAQgAIGPJBA8JXwkB5KGAAQgAIF/sQSaAAIQgAAEvghgCbQCBCAAAQhgCfQABCAA
+        AQh8J8BTAh0BAQhAAAJrnhL+SD5QhAAEIACBJxEoPSUsjtCn7a88CQq5QAACEPhMAljCZ9adrCEAAQgE
+        BA6whPZWaZnevGRqa2bDzF1+kvBKuEr47JI94rTnnkpgfQyVHPuHqj7USnbmgYy2hQAEIHAagQMsIZRL
+        c9EYQ6+q3hJ6EV/134dYQpbOMJJwgH7n1n6aTX5aH7AQBCAAgReBAyzBnIK1dBoRDI/q/pfZ3mCE/oan
+        /r7YlccCH6c/+Fe8cJUlmMBoUAhAAAInE9hrCf6cqw/LYnx4ZPZSLuxh7Tm9HoxR9uFCIpf6vSe3AstB
+        AAIQwBJ+/T+p6t5woCGF6/YX6U4IQAACJxPYawlNwsI3Lf5lS0V8zZzm5VIvytkrIP1qvvJko9/ym1db
+        rWbmHZoPtXKlh3ZyN7AcBCDw4QRKlrCKkX97vur24uBzVsmCmbt6ERHDIAABCKwlgCWsJfZrPJawhRr3
+        QAAClyeAJWwpEZawhRr3QAAClydwvCVcPmUChAAEIACBmACWQGdAAAIQgMAXASyBVoAABCAAASyBHoAA
+        BCAAge8EeEqgIyAAAQhAIH9K+Ovvf/gfBCAAAQh8IIHgKeFPPhCAAAQg8JEEsISPLDtJQwACEIgIYAn0
+        BQQgAAEIfBHAEmgFCEAAAhDAEugBCEAAAhD4ToCnBDoCAhCAAAR4SqAHIAABCECApwR6AAIQgAAEQgK8
+        OKIxIAABCECAF0f0AAQgAAEI8OKIHoAABCAAAV4c0QMQgAAEIKAI8LsE+gMCEIAABPhdAj0AAQhAAALX
+        +V3C792HukAAAhCAwHQCc14cLV7wo/ssV6bjIAAIQAACn0xggiU0M+i5L+5QrMRv//8UxzPsZAJLfU5e
+        lOUgAIH9BCbs28USfOg/f/6s5NNrDbpTIXbyGIpyMnCWg8CBBM62hMwPlpSGruDlBgE6sBv2T0U59jNk
+        BghMJPAQS2ivktori6ZN5qnCvHQKf9rqET6R+ItidV/a8K2Xv5i9ezHX+3+GkywBGBp+8kpUFT9exmTz
+        t2DC7Mz8/VT+R+GVYTX9gL7WwyoU+0GnOXG3szQEhgQeYglG+JoIhirjJbK/Ev40uyXUCDObqYH3KiG1
+        4Y+ErmUGYIQvHCYuerziikgwK0c4W7OELLDQm7NO8EblzXW4kLYEY88ZouGeZAAEJhJ4siVUpLYdDOsH
+        wF6qhCWE5+4mTNmN5oCZpSBiMMIkVNhrd2aHWVSCsJnK0DBy3DuW12Wv3eFxvujlw/L1WMKw/UV/BAnZ
+        TtznLA2BIoGzLeEV1p5fLxc1yB8Jtx0AewU3m9ycYXs9Ev8dypZOyhTSK5pXHyNq/QxrnU/fWyyHH5ad
+        oHUuG+7ywFdZQgg/7KWwHzLnK25OhkHgfAJzLOH1a2Tzm2R/JWMhztf+R9lgIT1G0MMDrD5fn2AJ2lpC
+        9/J6uuEpwdA43BK8l+tKDZ1+FahsNt8DZlpBMrPD87c6K0KgQmCCJbSwFhuom0G/M8PzlzgCm52Z7WFx
+        rFtrA8tUoWj6636wuF0ol7kr1NNw5srFNiZEoavTz5+l1vIyddS4+qj6kSFSccDPdN/MGR4RxEUsoSJD
+        jLkOgZmWcB0KnxPJ9RVqbYSZ2X9OTckUAgcSwBIOhHmDqdYK7qqU/IF9w3Jrb8ESVtWIwRDQBLCEz+qQ
+        tYJ7Jp3wPduZAbAWBCCAJdADEIAABCDwRQBLoBUgAAEIQABLoAcgAAEIQOA7AZ4S6AgIQAACEOApgR6A
+        AAQgAAGeEugBCEAAAhAICfDiiMaAAAQgAAFeHNEDEIAABCBwnRdHr69EbR/qAgEIQAAC0wnMeXG0OMHr
+        LzC3z3JlOg4CgAAEIPDJBCZYQjODnvviDcVK6K/SLE7CMAhAAAIQMASmWYKvhPkLClmpzDcnU1EIQAAC
+        EDiKwNmWkP1JtSWfoSuEf37gKBbMAwEIQODDCTzEEszXMr+KGv6ZF/1HYMQfXRETLj8yM4svHA3feoVL
+        h5OYrwvd/Edj/HdK+y8iNVEV/ThLsN9py1QChRkcZm2eF4f/FOj6+upaL4ENp7ryN85+uOSRvibwEEto
+        G7Vl20THK1G458P3Ufqi1wWzeojee5WQ2vBHQvsMBw/BWEjGzUikH1a/Eo40gWkm2WBTR20JIZmh+veB
+        iSC1Q6BBELgRgSdbQkVq20F1rSWEattbQngEDo/Gme4boelFrV/dS2EoZEX198InkhKE/R4IJTUU09Br
+        w8DMRYHFW4IpUN8JYtq+gsXVbyQHhAqBsy3hRTz7dcLwFwnDo+va4/PwkFjc/0Jtfcz6RJydvs3zR6h9
+        meb2Xb7W+fS9+y0hO7ybfIeV8kB0pjryoSUY4dCrozIQuBGBOZbwUn9jAP5KBjHc6pkoZ4O1Lnu9MJKk
+        T6zGBsxsh1hCKJHZzHUImfJW8A7NrPlrUe4ztyhqfeWpomKWq+oVLnojOSBUCEywhAZ9sYG6GfRSYt4t
+        iHN6f4ITYtQEK/SD4SnV24B5L6GD94PF7eJkbe7Knhs8vXA5P1s2v9HWsDqhJehI2nJZJEN3yfzYl1s7
+        TVbfim+hMhC4EYGZlnAjTI8JNTO8cxJcu7oQ9HMCZhUIfBqBO1mCPzNmR+lPq2I937WiXJ+5MnLt6lhC
+        hSpjIHAggTtZwoFpf+xUa0X5KFDZq6Sj5mceCEDgEAJYwiEYmQQCEIDAEwhgCU+oIjlAAAIQOIQAlnAI
+        RiaBAAQg8AQCWMITqkgOEIAABA4hgCUcgpFJIAABCDyBAJbwhCqSAwQgAIFDCGAJh2BkEghAAAJPIIAl
+        PKGK5AABCEDgEAIzLeH1lajtc0gyTAIBCEAAAnsIzLGExQl+dJ/lyp5MuBcCEIAABHYSmGAJzQz60Bd3
+        KCbDVxsVQc0adubXV8z6io5ZbPW6fDv3Netyo6imWYJnVPkTOq+7wi8xvhHxx4d6skafvNz1y3emH1+f
+        BhGuJXC2JWR/Um2Je+gKfv+jCGtL/tbx55fj/BXfCpDJITCXwEMswXxvdv8wYZ4qxB+B8e+jin9WRazu
+        qxu+9QqXDsXOnAH7f4r4zfsEf5CsRFXx42VMNv9CQ7z3KwI383gmIoawH1qZshzFs6mvvkjTt19/e7sx
+        jGfYJCLIuSrD6jci8BBLyPaS2eFGGYVziM3ZT5JtwlDNzZw+GC8EoUJ5UTMN5w2gn1lAyIB4GuJKEXK/
+        VqaAnlhlcmOTxVIOc2xul9EetlMbEJY+TG1Vk2SdeSM9ItTpBJ5sCeJUazZPeMw0mhXqrLAEf6bLDo+Z
+        7puoes3q5ck7hJCGMODhRRN5RaeMPhoaYWqrgFe8YajRvkbtilbtft8O6fkBFUswDlRpkqwrpqsMAdyI
+        wNmW8EKT/Tph+IuE+rlyGVm0BHGKbPP0swk51qddf+Ydnkx9J/nVtTgaCHX9EvT8abd4zBfn6+FZPpNI
+        kX7FErKihDl6JtrGhhUX5ahYQsjT3HgjMSLUKxCYYwkv9TcG4K9kdMJdlAlKNrioI+Fh0NvD0FSyeTZb
+        Qih2WVJ1CJmGVvAONT2ztxCOiUTb3lDWh8Itju3mRxWn3LPccq/uT9E2YSJXEBpiuAuBCZbQ0Cw2UDeD
+        duOyZ1ZtzuywbOQynLaiOF4FRJB+FT94mGOmYlpQ2rQeyDAqf68vQVM0MX+WWn9vP8bUyLeBibyeo8Bu
+        8GYxZOrvOfRRtYDDaYf5ZhtBBHkXPSLO6QRmWsL05D8wgFDEL8uhEq0+GVwntexQcp0IiQQCv44yN6Lg
+        z1nivHmjvM4MtSKyZ8aj16pEiyVcp15E8gACd7KEB+CenkJFZKcHuSqAu1jCqqQYDIFZBLCEWeRZFwIQ
+        gMDlCGAJlysJAUEAAhCYRQBLmEWedSEAAQhcjgCWcLmSEBAEIACBWQSwhFnkWRcCEIDA5QhgCZcrCQFB
+        AAIQmEUAS5hFnnUhAAEIXI4AlnC5khAQBCAAgVkEZlrC6ytR22dW/qwLAQhAAAKNwBxLWJzgR/dZrlAY
+        CEAAAhCYSGCCJTQz6NNe3GEIIvuSy+GNDHgTged9Q8abQDHtTQmY78S9aRZZ2MH3wZyf4VF/QgcxOr92
+        ZkVKML0EBHACAfPt6yeseOYS9jt6z1z7tZbxA8N6+IfV+Eb4k+ull8MSLlUOgoHABgIXsgT/FmibJYRP
+        dn5yYyfGjYp/zMR8QferAEIWw+/u9hezM4iPsM80i9/Q8JNXoqp8vWhmz56zb9NlTBZbG68r2w8Ti1YK
+        3YJpgfUxG+zLj3wnmEnMMPHkPqzRsGfCVtEtrYn5EmTpZLH11007ZW0clttU2YdtAljb3uGEYfrhpujb
+        oCESvZ3F35SkUsqsduG9fVRhVxsRO/t3Cf1TgqdZsYSwBb00+/bK9MUjC+8NN9jQEszkYVeJmol9G84s
+        eqWSZiYEYZpDIGKH9707rFRloXrierblp6GE6f7RiHzdhe1lEfZLFDe/n8onKPiL9i52coWnQRGyCpkI
+        UIaV8eP6bD0ckXJWmrrmGBfReEW3DzfC0O1mWoL30oolhHup0qDLLvJ7aaiVYhe1FMy0bc5suT4LH5U5
+        bvQnCH9jv9bwFDDcDCbysKdDYh5vCFzTNig8VRF/Xyazk/t5+qj8bD5fMZVRzEoTGm3q+0fv1bCRspQz
+        aw87TRcuTMpc9FWrGF5l5iGTbICpuLeEMOssbK8AQ9EwAyr7LhzjO8QX3TRtfSPE9HyPvvvK4b9e9sLR
+        71Wxyf2WDpvbN4QoXijKPoZs0/rb9bY3gnWgJZgIhd5lyuhvqe/wDT431MfKNtaWEAq6LmWowvUm8eLb
+        ZzFMWWu3ByIQeVXNVE/Ln94LWc8MJXVV4dbONtESsrxE6YtdkYrYuw3Az/+yhNfTgHkg8FfCwEQthzId
+        9mLYgqHODuc3yqhtqW4JRXsr+tZwM2SiMMsSMr9ZhaXulIZPVnTtbZmv65au9GdF+HSj6j55nyUs9dI8
+        M+WtnDkqZOonkqECVI4XYYtmF4c5VhKsjGkLXcgSWmEWGyiaQavB0lhFbxBVMZPog5sWJh+SidZM7uMP
+        gxEFbhtMN0EYWOViGxPqlN9aQoay1IphhHtPN4AvVj/eh9ona0b2gz3z8BAQriUwFjnsSXl4OjExZNUM
+        CYhWDAsh9sKw2TIIuuJrIxTNbEw9U6FKTUXz6K7TW97sl35wVmW7nEmSfz6GgKn0O/LavMTmG0/IQgvT
+        zgAulfjOXNbe/iG5b05z841rCyGM7ZdR7ZzuzNv9aW4WxDOz3rzWOXC2rbLtrs0o9I3+UOYfTQ5Z+lJZ
+        H5LRqkk+JP3NaW6+cVUVtB/czBL2ZP6B907psCLnK8fW3jMUc2HYkIB54TMcf+sBm3t7843H4rrTU8Kx
+        mTMbBCAAAQjY5waIQAACEIAABL7elwICAhCAAAQggCXQAxCAAAQg8I0Av0ugISAAAQhA4IsAlkArQAAC
+        EIAAlkAPQAACEIDAdwI8JdAREIAABCDAUwI9AAEIQAACPCXQAxCAAAQgEBLgxRGNAQEIQAACvDiiByAA
+        AQhAgBdH9AAEIAABCPDiiB6AAAQgAAFFgN8l0B8QgAAEIMDvEugBCEAAAhAY/i7hXz4QgAAEIPCRBIIX
+        Rx/JgaQhAAEIQOBfLIEmgAAEIACBLwJYAq0AAQhAAAJYAj0AAQhAAALfCfCUQEdAAAIQgMCap4Q/kg8U
+        IRASWPoFOBCAwO0IlJ4S/A5nz9+u0ucETGOcw5lVIPAmAljCm8B+4rT4wSdWnZyfReAAS2hvlRYy5iVT
+        w5UNM3f5ScIr4SqhJGWPOO3NRiWwPoZKjv1rkz7USnbZKxc/j4nEozZTrS2NR2Rgri19OGHLIoRsksoG
+        9yietUPJBgKnEjjAEsROFm+chBD3d63670MsIUtnGEk4QL9zaz/NJu97YdFTL8pFSRVialKuq3Cl9ENu
+        lfj7bgmh+ZhP3UYsBoGnEDjAEszpVUuA2c/hUd0cZs0Yr19+Tq2wwo38uVuczdcK4trITY+9zxJ8jiGi
+        LH5tbPstIWywzGvDY8FTdit5QODtBPZagpcDfVgW4/Xpb/jGoHLYHD4BZOH5s7k3Kp14eIzVYjq0hNAs
+        vasVl85Edgh2vyWYmHvzW1sRLOHtmsECjyaAJXx7G1NxrKFE9gOEzmbDQlHLHpWGTx599xbd2ltI8cah
+        KWZPDGGQ2ZNK3YEevXNJDgJvIbDXEvSbliZk2TAti8PXF+EAcdfwKUHE6UM1C2XH8zbMyLrXRz9hH7CZ
+        x7MVD1LhPEb6jdRWwqukprH4pg4Vv2KfPpi37BgmhcCjCZQsYRWBc57cz1klS/zk1SuH60qNNoe9+cZK
+        VIyBAASuQwBL2FKLkyUSS9hSJO6BAATWE8AS1jNz/0/QLVPMuGezk22+cUaWrAkBCGwncLwlbI+FOyEA
+        AQhAYCoBLGEqfhaHAAQgcCUCWMKVqkEsEIAABKYSwBKm4mdxCEAAAlcigCVcqRrEAgEIQGAqgcAS/vr7
+        H/4HAQhAAAIfSCCwhD/5QAACEIDARxLAEj6y7CQNAQhAICKAJdAXEIAABCDwRQBLoBUgAAEIQABLoAcg
+        AAEIQOA7AZ4S6AgIQAACEOApgR6AAAQgAAGeEugBCEAAAhAICfDiiMaAAAQgAAFeHNEDEIAABCDAiyN6
+        AAIQgAAEDn5x9HvhA3QIQAACELgRge2/S3g5wg/5+fnz541AECoEIAABCOy1BEFQW8Jv0Yd6XJPAUqu5
+        sbUApkcyl8Pm1T235Uq/Ec3kV6j75ny5cRuB7ft8eUqI30b912pDS/D9ty0H7norgetIMAq1p9DCEtq0
+        ZgzA9wC/6b3HW0JrIyzhpj3Rh30dP3gAzOkp9NUMn7qGA6anQADvJnCAJZg22m8J/fOskafwFJMF0J99
+        WlTmfVX/4ByO9xez5cKZRf3a+OK65hnfn+D8e4DsYLhM5WMLQ2rrLuP9GBO/P3JmgYUClFUkO8ma8LJ/
+        FjvH91vPOQvYkPG3hMXKLtYB1ru3RZhNXhzwbj1i/ukEjrEEs+eXrDY/JYSbUBxq9Hkn075QEM3G0Iem
+        +jkrLHODtnY3hus2lR/KlvCDUC+GaWbQTIIizT6kIfPQ57xPV5bzqQ1X79XflDW7d88qvljCR0X36h4L
+        bT5rs+maRQBvJXCYJfiu2mMJmTaZg9V+Ve13eL8HwhOc1r5w14WbrR+508+KctPzDD3SSM/QBlpeHpq5
+        onUznCesfuh5nmSlJfxUPozQpfrJQ2fKIi8eNUy3+CbMymSiDW8Mu65Sd29Lb5UkJp9L4ABLWDrGd+Hh
+        lpCJy/tUVZ8Zw8SHh7hVvhLKt44qC6A3v7DnKsl6ydNKXdTNUH/9RSP3JphQr4usNGfTYDqMovpr8xDF
+        GjZYuB1CVibU0FfCrT1Xs1j9rQSOsYTwHPEkS9D7cLhLPR+/b4eKHMpxsyUh1n0DZXJWOS3WIfRaY9R2
+        yCrjIJROwNxsCXvCKDqcMI9DAAqfW1vKcIO/VZiYfBaBwyzBJ7DHEsKzSX+x/bcZObzRn4yaqvbKssyT
+        Da6cBPtpvSya+PtTYTb4QEvIdniRXpaar4U4h2Ym5MshRmaFMJJnqjmEn9lYpqQizX4t4819VGEDhB1Y
+        aQ8/sz8W9O2UFU7cNUuwWPfdBHZZwkv09Wdb9OHpxkyVbdptK55817HBV3CdnOCVlzsW/jBTqjNExIBL
+        EdhuCe9Lo7KLTt7YxyZ7bPAVXAfGb47Y+kB64LpHTXUs/GFUJ1dnGA8DIKAJ3NUSqOvyOgXFuXgnUKCL
+        F4jw7AsYiEAAAhCAAAQWAld8SqA2EIAABCAwhQCWMAU7i0IAAhC4IgEs4YpVISYIQAACUwhgCVOwsygE
+        IACBKxLAEq5YFWKCAAQgMIUAljAFO4tCAAIQuCIBLOGKVSEmCEAAAlMI/A/LXdjZ7/2xvgAAAABJRU5E
+        rkJggg==
 </value>
   </data>
 </root>
